<resources>

    <string name="app_name">App Logo Quiz</string>

    <string name="quiz_start_text">Play Quiz Challenge!</string>

    <string name="scores_btn_text">See Scores!</string>

    <string name="about_app_btn_text">About This App...</string>
    <string name="slash">/</string>
    <string name="placeholder">###</string>
    <string name="space">" "</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="a_parenthesis">a.)</string>
    <string name="b_parenthesis">b.)</string>
    <string name="c_parenthesis">c.)</string>
    <string name="d_parenthesis">d.)</string>
    <string name="scores">Scores</string>
    <string name="name">Name</string>
    <string name="score">Score</string>
    <string name="about">About App Logo Quiz</string>
    <string name="author">Author:</string>
    <string name="author_name">Charles Montgomery</string>
    <string name="tab">"    "</string>
    <string name="contact">Contact:</string>
    <string name="contact_email">charles.montgomery@charter.net</string>
    <string name="app_info">
How well do you know the names of the apps on your device? This app tests your application title knowledge of apps that are on your device.  Let\'s see how you score or how you fare compared to others.
    </string>

</resources>